objects/Contract_Committee_Submittal__c.object
<CustomObject>
    <fields>
        <fullName>Pricing_Model_Attached__c</fullName>
        <defaultValue>false</defaultValue>
        <description>By checking you are confirming that the required attachment has been included in Notes &amp; Attachments area</description>
        <inlineHelpText>This document is required if over $100K in order to go to the Contract Committee for approval.  It must show Borrego Gross Margin Calculation.   By checking you are confirming that the required attachment has been included in Notes &amp; Attachments area</inlineHelpText>
        <label>Pricing Model Attached?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Pricing_Request_Approved__c</fullName>
        <description>Displays whether or not the selected Pricing Request for the PB3 has been approved.</description>
        <formula>IF(Pricing_Tool_Approval__r.Approval_Status__c   = &quot;Approved&quot;, &quot;Yes&quot;,
IF(Pricing_Tool_Approval__r.Approval_Status__c   = &quot;Preliminary Approval&quot;, &quot;Yes&quot;,
IF(Pricing_Tool_Approval__r.Approval_Status__c   = &quot;Final Approval&quot;, &quot;Yes&quot;, 
&quot;No&quot;
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pricing Request must be approved (&quot;Preliminary Approved&quot;, &quot;Approved&quot;, or &quot;Final Approved&quot;) to click PB3 Complete button.</inlineHelpText>
        <label>Pricing Request Approved?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to the pricing request of the same opportunity. Must have a site visit checklist</description>
        <inlineHelpText>Select the final approved pricing request for the opportunity. Note that the pricing request must have a site visit checklist to be shown in the lookup results.</inlineHelpText>
        <label>Pricing Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pricing_Tool_Approval__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pricing_Tool_Approval__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pricing_Tool_Approval_Status__c</fullName>
        <formula>TEXT(Pricing_Tool_Approval__r.Status__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the associated Pricing Tool Approval</inlineHelpText>
        <label>Pricing Tool Approval Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricing_Tool_Approval__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup the associated Pricing Request.</inlineHelpText>
        <label>Pricing Request</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Pricing_Tool_Approval__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <infoMessage>Pricing Tool Approval must have the same Opportunity.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Pricing_Tool_Approval__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prod_Model_Production_Formula__c</fullName>
        <formula>&quot;Prod Model= &quot;&amp; TEXT(Production_Modeling__r.Annual_Production_MWh_formula__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>for reporting and field reference only</inlineHelpText>
        <label>Prod Model Production Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <formula>IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Fixed Tilt Ground&quot;), &quot;Fixed Tilt Ground&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Single Axis Tracker&quot;), &quot;Single Axis Tracker&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Standalone Storage&quot;), &quot;Standalone Storage&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Floating Solar&quot;), &quot;Floating Solar&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Landfill&quot;), &quot;Landfill&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Dual Use/Ag Canopy&quot;), &quot;Dual Use/Ag Canopy&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Multiple&quot;), &quot;Multiple&quot;, NULL)  + BR() +
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Wind&quot;), &quot;Wind&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;SSS&quot;), &quot;SSS&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Roof&quot;), &quot;Roof&quot;, NULL)  + BR() + 
IF(INCLUDES(Opportunity__r.Proposed_Installation_Types__c, &quot;Other&quot;), &quot;Other&quot;, NULL)</formula>
        <inlineHelpText>Product Type from Opportunity</inlineHelpText>
        <label>Product Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Guarantee__c</fullName>
        <inlineHelpText>Is there a Production Guarantee?</inlineHelpText>
        <label>Production Guarantee?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_Modeling_Stage__c</fullName>
        <formula>TEXt(Production_Modeling__r.Production_Modeling_Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Design Stage at the time the Production Model was created</inlineHelpText>
        <label>Production Modeling Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Modeling_Status__c</fullName>
        <formula>TEXT( Production_Modeling__r.Status__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Status of the associated Production Modeling</inlineHelpText>
        <label>Production Modeling Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Modeling__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the associated Production Modeling- required if PPA</inlineHelpText>
        <label>Production Modeling</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Production_Modeling__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <infoMessage>Production Modeling must have the same Opportunity.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Production_Modeling__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Production_same_on_Prod_Model_Fin_Req__c</fullName>
        <formula>If(  OR(ISBLANK(Finance_Request__c), ISBLANK( Production_Modeling__c)), &quot;N/A&quot;, 
IF(Finance_Request__r.Year_1_Production__c =  (  Production_Modeling__r.Annual_Production_MWh_formula__c ),&quot;Yes&quot;, &quot;No: &quot;&amp; Fin_Req_Production_Formula__c &amp;&quot;, &quot;&amp; Prod_Model_Production_Formula__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Finance Req Year 1 Production = Prod Model Annual Production?
in kWh</inlineHelpText>
        <label>Production same on Prod Model &amp; Fin Req?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Products_Included__c</fullName>
        <formula>IF( Project__r.Number_of_Products__c &gt; 0, &quot;Yes&quot;, 
&quot;No&quot;)</formula>
        <inlineHelpText>indicates whether project products have been added to the associated project.</inlineHelpText>
        <label>Products Included?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Deadline_Date__c</fullName>
        <formula>Project__r.Deadline_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Deadline Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Associate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used by VP of Project Finance to assign a PF Associate.</inlineHelpText>
        <label>Project Finance Associate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Checklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Paste approved PF checklist here</description>
        <inlineHelpText>Paste approved Project Finance checklist here</inlineHelpText>
        <label>Project Finance Checklist</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>You must select a Project Finance Checklist with the same Opportunity as the Contract Committee Submital and it must have an approved status.</errorMessage>
            <filterItems>
                <field>Project_Finance_Checklist__c.Opportunity__c</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <filterItems>
                <field>Project_Finance_Checklist__c.Status__c</field>
                <operation>equals</operation>
                <value>Approved</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Project_Finance_Checklist__c</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Finance_Notes__c</fullName>
        <label>Project Finance Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_Financing_Type__c</fullName>
        <formula>Project_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Financing provided, listed on associated Opportunity</inlineHelpText>
        <label>Project Financing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Kickoff_Date__c</fullName>
        <formula>Project__r.Project_Kickoff_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <formula>Project__r.Owner:User.FirstName &amp;&quot; &quot;&amp;Project__r.Owner:User.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project Manager listed on the Project</inlineHelpText>
        <label>Project Manager</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <inlineHelpText>Financing provided, listed on the Opportunity</inlineHelpText>
        <label>Financing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Project associated with the CC Submittal- A project must be created prior to a development spending or contract execution request is submitted.</inlineHelpText>
        <label>Project</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>AcctSeed__Project__c.AcctSeed__Opportunity__r.Id</field>
                <operation>equals</operation>
                <valueField>$Source.Opportunity__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>AcctSeed__Project__c</referenceTo>
        <relationshipLabel>Contract and Development Approvals</relationshipLabel>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Projected_Gross_Margin_O_M__c</fullName>
        <label>Projected Gross Margin(O&amp;M)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ProposedProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Product in Salesforce. Ignore if Type is equal to Project Specific</inlineHelpText>
        <label>Proposed Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Proposed_Product_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Look up the Vendor Account for the proposed product. Ignore if Type is equal to Project Specific.</inlineHelpText>
        <label>Proposed Product Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Contract_Committee_Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROD_Email__c</fullName>
        <description>email address of ROD - used in alerts</description>
        <inlineHelpText>email address of ROD - used in alerts</inlineHelpText>
        <label>ROD Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Racking_Delivery_DAte__c</fullName>
        <formula>Project__r.Racking_Delivery_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Racking Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Regulatory_Concerns__c</fullName>
        <inlineHelpText>PD - What assumptions have been made regarding the incentives for the project?</inlineHelpText>
        <label>Regulatory Concerns</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Remaining_Development_Items__c</fullName>
        <inlineHelpText>What are the remaining development items needed for this project?</inlineHelpText>
        <label>Remaining Development Items</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3rd Party Review</fullName>
                </value>
                <value>
                    <fullName>ALTA Survey</fullName>
                </value>
                <value>
                    <fullName>ANRAD</fullName>
                </value>
                <value>
                    <fullName>Bid Fees</fullName>
                </value>
                <value>
                    <fullName>Bond Copies</fullName>
                </value>
                <value>
                    <fullName>Civil Engineering</fullName>
                </value>
                <value>
                    <fullName>Conservation Committee</fullName>
                </value>
                <value>
                    <fullName>Environmental Site Assessment</fullName>
                </value>
                <value>
                    <fullName>Geotech Report</fullName>
                </value>
                <value>
                    <fullName>Impact Study Agreement</fullName>
                </value>
                <value>
                    <fullName>Interconnection</fullName>
                </value>
                <value>
                    <fullName>Lease Option Payment</fullName>
                </value>
                <value>
                    <fullName>MEPA / CEQA</fullName>
                </value>
                <value>
                    <fullName>Natural Heritage</fullName>
                </value>
                <value>
                    <fullName>Permitting</fullName>
                </value>
                <value>
                    <fullName>Project Acquisition Costs</fullName>
                </value>
                <value>
                    <fullName>Purchase Cost Milestone</fullName>
                </value>
                <value>
                    <fullName>Supplemental Review</fullName>
                </value>
                <value>
                    <fullName>SWPP</fullName>
                </value>
                <value>
                    <fullName>Title History Report</fullName>
                </value>
                <value>
                    <fullName>Topographic Survey</fullName>
                </value>
                <value>
                    <fullName>Wetlands Delineation Map</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Remaining_development_spending_required__c</fullName>
        <inlineHelpText>Total amount of development spending required to sign the contract with a rough schedule on when that spending will have to take place.</inlineHelpText>
        <label>Remaining development spending required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Date_PB3_Complete__c</fullName>
        <description>auto date stamps the date PB3 is completed via WF</description>
        <inlineHelpText>auto date stamps the date PB3 is completed</inlineHelpText>
        <label>Date PB3 Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requested_amount_to_spend__c</fullName>
        <inlineHelpText>Amount requested to spend from the Contracts Committee</inlineHelpText>
        <label>Requested Amount to Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Risks_and_Mitigants_Explanation__c</fullName>
        <inlineHelpText>Identify the areas of material risk in the contract and why/how we should be comfortable with them</inlineHelpText>
        <label>Risks and Mitigants Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SIS_Results__c</fullName>
        <inlineHelpText>Link to SIS results from utility</inlineHelpText>
        <label>SIS Results</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Sales_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>auto checks off once 1st step of approval process is completed.</inlineHelpText>
        <label>Sales Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Schedule__c</fullName>
        <description>link to schedule</description>
        <inlineHelpText>link to schedule</inlineHelpText>
        <label>Schedule</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Schedule_of_Values_Approval_Status__c</fullName>
        <inlineHelpText>Has Schedule of Values been approved?  SEE SOP.
SOV Approved by Finance=attach documentation of approval. 
SOV Not Approved=attach documentation showing the improvements that that 
Finance required but that you were unable to obtain from the customer.</inlineHelpText>
        <label>Schedule of Values Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SOV Approved - Pre-Approved SOV for buyer</fullName>
                </value>
                <value>
                    <fullName>SOV Approved - Borrego Standard SOV</fullName>
                </value>
                <value>
                    <fullName>SOV Approved by Finance</fullName>
                </value>
                <value>
                    <fullName>SOV Not Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Significant_Conditions_Precedent__c</fullName>
        <description>Note any significant CPs or likely CPs to a sale of the assets on Development No EPC Record Type</description>
        <inlineHelpText>Note any significant CPs or likely CPs to a sale of the assets</inlineHelpText>
        <label>Significant Conditions Precedent</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Site_Mobilization_DAte__c</fullName>
        <formula>Project__r.Site_Mobilization_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site Mobilization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_PTO_Date__c</fullName>
        <description>What is the expected PTO date, pulls from related Site.</description>
        <formula>Project__r.Site_PTO_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the expected PTO date, pulls from related Site.</inlineHelpText>
        <label>Site PTO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Site_control_needed_for_access_and_intx__c</fullName>
        <label>Site control needed for access and intx?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Skeletal_survey__c</fullName>
        <description>Box link for folder containing Skeletal survey files</description>
        <inlineHelpText>Paste box link for folder containing Skeletal survey files</inlineHelpText>
        <label>Skeletal survey</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Slope_Analysis_Link__c</fullName>
        <inlineHelpText>Groundmounts only</inlineHelpText>
        <label>Link to Slope Analysis</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Specific_Yield_kWh_kWp__c</fullName>
        <inlineHelpText>Specific yield from most recent approved Production Model</inlineHelpText>
        <label>Specific Yield ( kWh/kWp )</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Spending_Explanation__c</fullName>
        <inlineHelpText>Why is it critical to spend this money and what will we get for it (de-risking project how)?</inlineHelpText>
        <label>Spending Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spending_Request_Including_75_Payment__c</fullName>
        <inlineHelpText>Identify what is known about upcoming spending including the 75% Payment.</inlineHelpText>
        <label>Spending Request Including 75% Payment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage_of_development_request__c</fullName>
        <inlineHelpText>Stage of Development Request from the Pricing Tool. If multiple spending items at different stages exist, enter the highest stage</inlineHelpText>
        <label>Stage of development request</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>Project Approval- PB10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted to 7C</fullName>
                    <label>Submited to 7C</label>
                </value>
                <value>
                    <fullName>Accepted into 7C</fullName>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Approval Out of 7C</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Approved- Pending Products</fullName>
                </value>
                <value>
                    <fullName>Final Approved- Products Locked</fullName>
                </value>
                <value>
                    <fullName>Meeting Held</fullName>
                </value>
                <value>
                    <fullName>Kickoff Complete</fullName>
                </value>
                <value>
                    <fullName>Action Item Minor</fullName>
                </value>
                <value>
                    <fullName>Action Item Major</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_Offtake_and_Next_Steps__c</fullName>
        <inlineHelpText>What is the status of the offtaker agreement and what are the next steps?</inlineHelpText>
        <label>Status of Offtake and Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_of_PB3__c</fullName>
        <description>Shows the status of the PB3 Approval</description>
        <inlineHelpText>Shows the status of the PB3 Approval</inlineHelpText>
        <label>Status of PB3</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>PB3 Team Notified</fullName>
                </value>
                <value>
                    <fullName>PB3 Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_of_PB3_formula__c</fullName>
        <description>used bc there is a need to keep the normal &quot;status of pb3&quot; field editable (for the java button notify PB3 to work) but off the layout so users do not edit it (bc date fields only fire on button pushed status changes not manual status change)</description>
        <formula>TEXT(Status_of_PB3__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Displays the status of the PB3. Click the buttons at the top of the page to change.</inlineHelpText>
        <label>Status of PB3</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_Energy_kWh__c</fullName>
        <description>Storage Energy (kWh) from Opportunity updated by flow</description>
        <inlineHelpText>Storage Energy (kWh) from Opportunity</inlineHelpText>
        <label>Storage Energy (kWh)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Submit_to_Meeting_Accepted__c</fullName>
        <formula>Date_Meeting_Accepted__c -  Date_Submitted_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between the date is was submitted for approval and date the request was approved and moved into meeting accepted status</inlineHelpText>
        <label>Submit to Meeting Accepted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_AC_w__c</fullName>
        <label>System Size AC (w)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_Difference__c</fullName>
        <formula>Pricing_Tool_Approval__r.System_Size_from_Pricing_Tool__c  -  Finance_Request__r.System_Size_DC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>STC watts (Pricing inputs cell K188) - System size in watts DC</inlineHelpText>
        <label>System Size Difference</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_from_Pricing_Tool__c</fullName>
        <formula>Pricing_Tool_Approval__r.System_Size_from_Pricing_Tool__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>System Size listed on the associated approved Pricing Tool</inlineHelpText>
        <label>System Size from Pricing Tool</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_on_Project__c</fullName>
        <formula>Project__r.Overall_Project_Size_Watts_STC__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Overall System Size on the Project. Based on the Project Products (Module Qty * Watts STC)</inlineHelpText>
        <label>System Size on Project</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>System_Size_w__c</fullName>
        <inlineHelpText>From Opportunity:
Original Contract System Size in watts- Proposed or executed Contract System Size</inlineHelpText>
        <label>System Size (w)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <description>Accounting Variable record ID from Team on related Opportunity--don&apos;t put on layout</description>
        <formula>Opportunity__r.Team__c</formula>
        <inlineHelpText>Accounting Variable record ID from Team on related Opportunity</inlineHelpText>
        <label>Team</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term__c</fullName>
        <inlineHelpText>How long is the Production Guarantee?</inlineHelpText>
        <label>Term</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Concerns__c</fullName>
        <inlineHelpText>Explain any title concerns</inlineHelpText>
        <label>Title Concerns?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Report_its_Legal_Review__c</fullName>
        <description>Box link for folder containing title report and legal review of the title report</description>
        <inlineHelpText>Paste box link for folder containing title report and legal review of the title report</inlineHelpText>
        <label>Title Report &amp; its Legal Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Title_Reviewed_By_Legal__c</fullName>
        <inlineHelpText>N/A for Cash Jobs</inlineHelpText>
        <label>Has Title Been Reviewed by Legal?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Costs_to_Date__c</fullName>
        <formula>Project__r.TotalCostsToDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of all transaction hitting GL 3600 and posted. (AP Lines, Journal Entries, Inbound/Outbound movements, Cash Receipts)</inlineHelpText>
        <label>Total Costs to Date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Days__c</fullName>
        <formula>Date_Kickoff_Completed__c -  Date_Submitted_for_Approval__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>calculates # of days between kickoff completed and date request was submitted for approval</inlineHelpText>
        <label>Total Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Direct_Margin_Ex_Inx__c</fullName>
        <inlineHelpText>From Opportunity:
Total Direct Profit / MIPA Contract Value Ex Intx</inlineHelpText>
        <label>Total Direct Margin (%) Ex Inx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
</CustomObject>